<!--
** Copyright (C) 2016  Michael Roland <mi.roland@gmail.com>
**
** This program is free software: you can redistribute it and/or modify
** it under the terms of the GNU General Public License as published by
** the Free Software Foundation, either version 3 of the License, or
** (at your option) any later version.
**
** This program is distributed in the hope that it will be useful,
** but WITHOUT ANY WARRANTY; without even the implied warranty of
** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
** GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License
** along with this program.  If not, see <http://www.gnu.org/licenses/>.
**
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/command_mfoc">

        <Preference
            android:key="launch_mfoc"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/launch_mfoc"
            android:icon="@android:drawable/ic_menu_set_as" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/output_dump_file">

        <Preference
            android:key="mfoc_output_file_path"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_path" />

        <EditTextPreference
            android:key="mfoc_output_file_name"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_name" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/keys">

        <EditTextPreference
            android:key="known_keys"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:singleLine="false"
            android:minLines="1"
            android:digits="0123456789ABCDEFabcdef :-_.;,\n"
            android:inputType="textCapCharacters|textMultiLine|textNoSuggestions"
            android:title="@string/known_keys" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/advanced_settings">

        <ListPreference
            android:key="mfoc_probes"
            android:entries="@array/pref_mfoc_probes_names"
            android:entryValues="@array/pref_mfoc_probes"
            android:defaultValue="@string/pref_mfoc_probes_default"
            android:title="@string/mfoc_probes" />

        <ListPreference
            android:key="mfoc_tolerance"
            android:entries="@array/pref_mfoc_tolerance_names"
            android:entryValues="@array/pref_mfoc_tolerance"
            android:defaultValue="@string/pref_mfoc_tolerance_default"
            android:title="@string/mfoc_tolerance" />

    </PreferenceCategory>

</PreferenceScreen>
