<!--
** Copyright (C) 2016  Michael Roland <mi.roland@gmail.com>
**
** This program is free software: you can redistribute it and/or modify
** it under the terms of the GNU General Public License as published by
** the Free Software Foundation, either version 3 of the License, or
** (at your option) any later version.
**
** This program is distributed in the hope that it will be useful,
** but WITHOUT ANY WARRANTY; without even the implied warranty of
** MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
** GNU General Public License for more details.
**
** You should have received a copy of the GNU General Public License
** along with this program.  If not, see <http://www.gnu.org/licenses/>.
**
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/command_write_clone">

        <Preference
            android:key="launch_write_clone"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/launch_nfc_mfclassic"
            android:icon="@android:drawable/ic_menu_set_as" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/clone_target">

        <SwitchPreference
            android:key="clone_target_chinese"
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:title="@string/clone_target_chinese" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/input_dump_file">

        <Preference
            android:key="clone_input_file_path"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_path" />

        <Preference
            android:key="clone_input_file_name"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_name" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/input_key_file"
        android:dependency="clone_target_chinese">

        <Preference
            android:key="key_input_file_path"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_path" />

        <Preference
            android:key="key_input_file_name"
            android:defaultValue=""
            android:selectAllOnFocus="true"
            android:title="@string/file_name" />

        <ListPreference
            android:key="write_clone_keytype"
            android:entries="@array/pref_write_clone_keytype_names"
            android:entryValues="@array/pref_write_clone_keytypes"
            android:defaultValue="@string/pref_write_clone_keytype_default"
            android:title="@string/write_clone_keytype" />

    </PreferenceCategory>

</PreferenceScreen>
